--- a/main.css
+++ b/main.css
@@ -21,7 +21,10 @@ header{
 section{
   position: relative;
   text-align: center;
-  color: white;
+}
+
+.carousel__img{
+  width: 100%;
 }
 
 .text__centered {
@@ -63,4 +66,20 @@ main{
 .main__p{
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
+}
+
+@media screen and (max-width: 440px) {
+  .text__centered{
+    font-size: 30px;
+  }
+
+  main{
+    padding: 20px 40px;
+  }
+
+  main img{
+    width: 300px
+  }
+
+  
 }
